--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="172dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload Stations"
+        android:onClick="onClickUploadStations"
+        android:id="@+id/button3"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="272dp" />
+
 </RelativeLayout>
