--- a/app/src/main/res/layout/activity_show_map.xml
+++ b/app/src/main/res/layout/activity_show_map.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="zeitfaden.com.zeitfaden.ShowMapActivity">
+    tools:context="zeitfaden.com.zeitfaden.activities.ShowMapActivity">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
