--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,13 +30,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Sign in"
+        android:text="Sign in this here"
         android:padding="10dp"/>
 
     <TextView android:id="@+id/signUp"
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:text="New user?"
         android:padding="10dp"/>
 
